--- a/site/index.html
+++ b/site/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Hello World!</title>
+	<title>Hello Coursera!</title>
 </head>
 <body>
-<h1>Hello World! It's a great world</h1>
+<h1>Hello Coursera! It's a great course.</h1>
 </body>
 </html>
